force-app/main/default/force-app/main/default/objects/ARMT_Catalogue__c/ARMT_Catalogue__c.object-meta.xml
<CustomObject>
    <label>ARMT Catalogue</label>
    <pluralLabel>ARMT Catalogues</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Catalogue of migration objects and types tracked by ARMT.</description>
</CustomObject>