force-app/main/default/force-app/main/default/objects/ARMT_Catalogue__c/fields/ARMT_Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>ARMT_Duplicate_Check__c</fullName>
    <label>Duplicate Check</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Formula or process-set flag used by BR-013 validation rule to detect duplicate catalogue entries.</description>
</CustomField>