force-app/main/default/force-app/main/default/objects/ARMT_Catalogue__c/fields/Configuration_Details__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Details__c</fullName>
    <label>Configuration Details</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>