force-app/main/default/force-app/main/default/objects/ARMT_Catalogue__c/validationRules/BR_013.validationRule-meta.xml
<ValidationRule>
    <fullName>BR_013</fullName>
    <active>true</active>
    <description>Business rule enforcing no duplicate record of the same object type and name on ARMT_Catalogue__c.</description>
    <errorConditionFormula>ARMT_Duplicate_Check__c = TRUE</errorConditionFormula>
    <errorMessage>A catalogue record with the same object type and name already exists. Duplicate records are not permitted (BR-013).</errorMessage>
</ValidationRule>